[gd_scene load_steps=18 format=2]

[ext_resource path="res://images/ui/reciept.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/OpenDyslexic-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://images/Items/v2/Seal.png" type="Texture" id=3]
[ext_resource path="res://images/Items/v2/Frog.png" type="Texture" id=4]
[ext_resource path="res://images/Items/v2/Ghost.png" type="Texture" id=5]
[ext_resource path="res://images/ui/reciept pink paper.jpg" type="Texture" id=6]
[ext_resource path="res://images/ui/Tape.png" type="Texture" id=7]
[ext_resource path="res://rooms/Menus/RunStatsReciept.gd" type="Script" id=8]
[ext_resource path="res://images/msc/barcode.png" type="Texture" id=9]
[ext_resource path="res://objects/ui/Tag.tscn" type="PackedScene" id=10]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "ComeIn"
length = 4.5
tracks/0/type = "value"
tracks/0/path = NodePath("Recipt:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5, 2.6, 3.5, 4.5 ),
"transitions": PoolRealArray( 0.353554, 1, 0.258816, 1, 0.225313, 1 ),
"update": 0,
"values": [ Vector2( 45, 295 ), Vector2( 45, 80 ), Vector2( 45, 80 ), Vector2( 45, -105 ), Vector2( 45, -105 ), Vector2( 45, -297 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Tint:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 2.7, 4.5 ),
"transitions": PoolRealArray( 1, 0.420448, 0.378929, 0.258816 ),
"update": 0,
"values": [ Color( 1, 0.705882, 0.815686, 0 ), Color( 1, 0.705882, 0.815686, 0.223529 ), Color( 1, 0.705882, 0.815686, 0.266667 ), Color( 1, 0.705882, 0.815686, 0.4 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 4.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "can_restart"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TagsHolder:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.5, 4.5 ),
"transitions": PoolRealArray( 1, 0.329877, 1 ),
"update": 0,
"values": [ Vector2( -552, 0 ), Vector2( -552, 0 ), Vector2( -164, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 251 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Recipt:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 246 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Tint:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.705882, 0.815686, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Recipt:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TagsHolder:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -903, 0 ) ]
}

[node name="RunStatsReciept" type="Node2D"]
position = Vector2( 0, 251 )
script = ExtResource( 8 )

[node name="Tint" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 544.0
color = Color( 1, 0.705882, 0.815686, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipt" type="Node2D" parent="."]
position = Vector2( 2, 246 )
scale = Vector2( 0.89479, 0.89479 )

[node name="PaperOrigin" type="Position2D" parent="Recipt"]
position = Vector2( 561, 1036 )
rotation = -0.117578
scale = Vector2( 2.50949, 2.50949 )

[node name="Sprite" type="Sprite" parent="Recipt/PaperOrigin"]
position = Vector2( 0, -80.3906 )
scale = Vector2( 0.343537, 0.491545 )
texture = ExtResource( 1 )

[node name="receipt" type="Label" parent="Recipt/PaperOrigin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -242.829
margin_top = -305.15
margin_right = 240.171
margin_bottom = -228.15
custom_colors/font_color = Color( 0.184314, 0.184314, 0.184314, 1 )
custom_fonts/font = SubResource( 1 )
text = "your receipt:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Broken" type="Label" parent="Recipt/PaperOrigin"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.532
margin_top = -287.223
margin_right = 242.468
margin_bottom = -210.223
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "**** Broken ****"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemsLabel" type="Node2D" parent="Recipt"]
position = Vector2( -67, 90 )
rotation = -0.13308

[node name="PinkBG" type="Sprite" parent="Recipt/ItemsLabel"]
modulate = Color( 0.937255, 0.937255, 0.937255, 1 )
position = Vector2( 503.835, 595.831 )
scale = Vector2( 0.850854, 0.30712 )
texture = ExtResource( 6 )

[node name="Items" type="Label" parent="Recipt/ItemsLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 259.451
margin_top = 473.614
margin_right = 742.451
margin_bottom = 550.614
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = " Items:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Items2" type="Label" parent="Recipt/ItemsLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 256.759
margin_top = 440.968
margin_right = 739.759
margin_bottom = 517.968
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "------------------------------"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Items3" type="Label" parent="Recipt/ItemsLabel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 262.201
margin_top = 626.418
margin_right = 745.2
margin_bottom = 703.418
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "------------------------------"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tape" type="Sprite" parent="Recipt/ItemsLabel"]
visible = false
position = Vector2( 268.365, 597.294 )
rotation = 0.0710681
scale = Vector2( 0.147695, 0.363043 )
texture = ExtResource( 7 )

[node name="Tape2" type="Sprite" parent="Recipt/ItemsLabel"]
visible = false
position = Vector2( 736.909, 594.984 )
rotation = 0.0710681
scale = Vector2( -0.148, 0.363 )
texture = ExtResource( 7 )

[node name="Slots" type="Node2D" parent="Recipt"]
position = Vector2( 86, 96.8 )
scale = Vector2( 0.81056, 0.81056 )

[node name="SlotLarge0" type="Sprite" parent="Recipt/Slots"]
position = Vector2( 368.524, 654.418 )
rotation = -0.13308
texture = ExtResource( 4 )

[node name="SlotLarge1" type="Sprite" parent="Recipt/Slots"]
position = Vector2( 527.109, 633.188 )
rotation = -0.13308
texture = ExtResource( 3 )

[node name="SlotLarge2" type="Sprite" parent="Recipt/Slots"]
position = Vector2( 685.695, 611.958 )
rotation = -0.13308
texture = ExtResource( 5 )

[node name="Score" type="Node2D" parent="Recipt"]
position = Vector2( 2, 18 )

[node name="StagesCleared" type="Label" parent="Recipt/Score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 321.0
margin_top = 691.722
margin_right = 550.0
margin_bottom = 768.722
rect_rotation = -7.43527
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Stages Cleared:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StagesClearedNum" type="Label" parent="Recipt/Score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 538.0
margin_top = 665.088
margin_right = 752.0
margin_bottom = 742.088
rect_rotation = -7.43527
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighestScoreNum" type="Label" parent="Recipt/Score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 542.0
margin_top = 721.088
margin_right = 756.0
margin_bottom = 798.088
rect_rotation = -7.43527
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighestScore" type="Label" parent="Recipt/Score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 328.0
margin_top = 747.088
margin_right = 559.0
margin_bottom = 824.088
rect_rotation = -7.43527
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Highest score:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Recipt/Score"]
position = Vector2( 550.137, 856.668 )
rotation = -0.132857
scale = Vector2( 0.600001, 0.286302 )
texture = ExtResource( 9 )

[node name="TagsHolder" type="Node2D" parent="."]
position = Vector2( -903, 0 )

[node name="Tag" parent="TagsHolder" instance=ExtResource( 10 )]
position = Vector2( 169, 25 )
scale = Vector2( 0.57748, 0.57748 )
room_path = "res://rooms/msc/Credits.tscn"

[node name="Label" parent="TagsHolder/Tag" index="1"]
text = "Credits"

[node name="Tag2" parent="TagsHolder" instance=ExtResource( 10 )]
position = Vector2( 169, 148 )
scale = Vector2( 0.57748, 0.57748 )

[node name="Label" parent="TagsHolder/Tag2" index="1"]
text = "Catalouge"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ComeIn = SubResource( 7 )
anims/RESET = SubResource( 6 )

[editable path="TagsHolder/Tag"]
[editable path="TagsHolder/Tag2"]
